2004-09-03 Magnus Hagdorn
 * glide_types.f90, ncdf_vars.def: new mask variable
 * glide.f90: calculating mask
 * glide_types.f90: fixed a bug where we didn't make sure that ice is present
 * generate_ncvars.py: variables can now have different types
	
2004-09-01 Magnus Hagdorn
 * glide_mask.f90: added module describing model cell content, it's not hooked up yet

2004-08-27 Magnus Hagdorn
 * simple_forcing.f90: fixed another bug introduced by previous fix

2004-08-24 Magnus Hagdorn
 * the automatic detection of the length of an array in glimmer_config does not work
   so we need a separate variable for the constant basal traction case (glide_setup.f90, glide.tex)
 * glide_types.f90: some arrays for the staggered leap frog were not initialised, it still doesn't work
   though
 * glimmer_paramets.f90: adjust vis0 to match EISMINT cases
 * simple_forcing.f90: surface temperature distribution of EISMINT-1 case was not scaled propperly
 * some tidying up of unused symbols (glimmer_velo.f90, ncdf_file.f90.in, ncdf_infile.f90.in)
	
2004-08-20 Magnus Hagdorn
 * changed vis0 scale to match EISMINT-1 cases (glimmer_velo.f90)
 * added module holding variable scales (ncdf.f90.in)
 * initialise and use new scales (glide.f90, ncdf_file.f90.in, ncdf_infile.f90.in, ncdf_vars.def)

2004-08-18 Magnus Hagdorn
 * some variables are time-dep again which makes visualisation easier (ncdf_vars.def)

2004-08-18 Magnus Hagdorn
 * optimised hsum, execution of hsum improved by a factor of 2.3
   this leads to an overall improvement by a factor of 1.27 for an EISMINT-2 run
   (glimmer_utils.f90, glimmer_velo.f90)
	
2004-08-16 Magnus Hagdorn
 * data_dep.dot: added plot of data dependency
 * glide.f90: when hotstarting temp and flwa is read from file
 * added hotstart option: glide_types.f90, glide_setup.f90
 * ncdf_params.f90.in: select variables needed for hotstarting model
 * ncdf_vars.def: selected variables needed for hotstart