@@ -62,7 +62,6 @@ contains
     oc=>model%funits%out_first
     do while(associated(oc))
        call glimmer_nc_createfile(oc,model)
-       oc%next_write=model%numerics%tstart
        oc=>oc%next
     end do
   end subroutine openall_out
@@ -133,7 +132,8 @@ contains
     status = nf90_create(NCO%filename,NF90_CLOBBER,NCO%id)
     call nc_errorhandle(__FILE__,__LINE__,status)
     call write_log_div
-    write(message,*) 'Opening file ',trim(NCO%filename),' for output; write period every ',outfile%freq,' years'
+    write(message,*) 'Opening file ',trim(NCO%filename),' for output; '
+    write(message,*) '  Starting output at ',outfile%next_write,' and write every ',outfile%freq,' years'
     call write_log(trim(message))
 
     ! writing meta data
